TestSuite/errors/err0337.pas
begin
  var s := $'{1}} {0}';
end.